
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "scotgeobot"
version = "0.0.6"
authors = [{name="jklebes", email="jsklebes@googlemail.com"},]
description = "Automated alerts of geohashes in or near cities in Scotland"
readme = "README.md"
classifiers = [
"Programming Language :: Python :: 3"]
dependencies = ["shapely","plyer"]
optional-dependencis = ["geojson", "pytest","flake8", "mastodon", "requests"]

[project.urls]
homepage = "https://github.com/jklebes/scotgeobot"
Issues = "https://github.com/jklebes/scotgeobot/issues"


[tool]
